# nexus-platform

./: .gitignore  MICROSERVICE_SETUP.md  QUICK_START_MICROSERVICES.md  README.md  SETUP_COMPLETE.md
backend/: .env.example  .gitignore  README.md  check_db.py  debug_deployment_job.py  migrate_groups.py  pyproject.toml  requirements.txt  run_migration.py  schema.sql  update_manifest.py
backend/app/: __init__.py  config.py  database.py  logger.py  main.py  worker.py
backend/app/api/: aws_oidc.py  azure_oidc.py  credentials.py  deps.py  gcp_oidc.py  oidc.py  oidc_tokens.py  plugins.py  provision.py  webhooks.py
backend/app/core/: audit_middleware.py  authorization.py  casbin.py  db_init.py  enforcement_helpers.py  enforcer_wrapper.py  file_validation.py  migrate_casbin_policies.py  oidc.py  organization.py  permission_registry.py  rbac.py  redis_client.py  security.py  security_middleware.py  utils.py
backend/app/models/: __init__.py  audit.py  business_unit.py  deployment.py  notification.py  plugins.py  rbac.py  refresh_token.py  user.py
backend/app/schemas/: audit.py  auth.py  business_unit.py  cost.py  deployment.py  group.py  microservice.py  notification.py  organization.py  plugins.py  rbac.py  user.py
backend/app/services/: audit_service.py  aws_cost_service.py  cloud_integrations.py  crypto.py  deployment_service.py  gcp_cost_service.py  git_service.py  github_actions_service.py  storage.py  (+6 more)
backend/migrations/: 001_add_cloud_identity_columns.sql  README.md
backend/scripts/: migrate_microservice_support.sql  run_migrations.py  setup_github_webhook.py
(+110 files in other folders)
